Rename prototyper link to prototyper_web to make sure correct host is used by reverse proxy

--- a/nginx/prototyper.conf
+++ b/nginx/prototyper.conf
@@ -24,7 +24,7 @@ server {
     server_name_in_redirect     off;
 
     location / {
-        proxy_pass              http://prototyper;
+        proxy_pass              http://prototyper_web;
         proxy_set_header        X-Forwarded-Proto https;
         proxy_set_header        Host prototyper.example.com; #FIXME
     }
