--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
-  prototyper:
-    container_name: prototyper
+  prototyper_web:
+    container_name: prototyper_web
     build:
       context: ./prototyper_web
       args:
