--- a/nginx/prototyper.conf.template
+++ b/nginx/prototyper.conf.template
@@ -21,6 +21,8 @@ server {
     access_log                  /var/log/nginx/access.log;
     error_log                   /var/log/nginx/error.log;
 
+    client_max_body_size        500M;
+
     server_name_in_redirect     off;
 
     location / {
