--- a/nginx/prototyper.conf.template
+++ b/nginx/prototyper.conf.template
@@ -18,6 +18,22 @@ server {
     ssl_certificate             /etc/letsencrypt/live/prototyper.example.com/fullchain.pem; #FIXME
     ssl_certificate_key         /etc/letsencrypt/live/prototyper.example.com/privkey.pem; #FIXME
 
+    ssl_protocols               TLSv1.2 TLSv1.3;
+    ssl_dhparam                 /etc/nginx/dhparam.pem;
+    ssl_prefer_server_ciphers   on;
+    ssl_ciphers                 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256';
+    ssl_ecdh_curve              secp384r1;
+    ssl_session_timeout         10m;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_tickets         off;
+    ssl_stapling                on;
+    ssl_stapling_verify         on;
+    
+    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
+    add_header X-Frame-Options DENY;
+    add_header Referrer-Policy same-origin;
+    add_header Content-Security-Policy "script-src 'self' 'unsafe-inline' 'unsafe-eval'";
+
     access_log                  /var/log/nginx/access.log;
     error_log                   /var/log/nginx/error.log;
 
